packing-list printing added

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -1,55 +1,62 @@
-.table.variants
-{
-    tr
-    {
+.text-center {
+    text-align: center;
+}
+
+// variants
+.table.variants {
+    tr {
         &:not(.type-NE) {
-            background:rgb(204, 236, 227);
+            background: rgb(204, 236, 227);
         }
         &:first-child {
             background: #fff;
         }
         label {
-            display:none;
+            display: none;
         }
         select {
             min-width: 120px;
         }
         small,
         .form-group {
-            margin-bottom:0;
+            margin-bottom: 0;
         }
     }
 }
+
 .lang-tab-content {
-    background:#fff;
-    border-left:1px solid #dfe3e9;
-    border-right:1px solid #dfe3e9;
-    border-bottom:2px solid #c1c9d4;
-    padding:20px 12px 12px 12px;
+    background: #fff;
+    border-left: 1px solid #dfe3e9;
+    border-right: 1px solid #dfe3e9;
+    border-bottom: 2px solid #c1c9d4;
+    padding: 20px 12px 12px 12px;
 }
+
 .redactor-editor {
     background: #F7F6FB;
     border: 1px solid #c1c9d4;
     color: #324050;
-    padding-left:12px;
+    padding-left: 12px;
 }
+
 .redactor-air, .redactor-toolbar {
     border: 1px solid #c1c9d4;
-    border-bottom:none;
+    border-bottom: none;
 }
+
 fieldset {
-    margin-top:20px;
+    margin-top: 20px;
     display: block;
     legend {
         background-color: #dfe3e9;
         font-weight: normal;
-        line-height:40px;
-        padding:0 12px;
-        margin-bottom:15px;
+        line-height: 40px;
+        padding: 0 12px;
+        margin-bottom: 15px;
     }
     .form-label {
-        font-weight:normal;
-        line-height:34px;
+        font-weight: normal;
+        line-height: 34px;
         position: relative;
         display: block;
         padding-left: 36px;
@@ -90,6 +97,37 @@ fieldset {
             height: 12px;
             background: #515253;
             border-radius: 50%;
+        }
+    }
+}
+
+//Packing list styles
+.packing-list-page {
+    font-size:12px;
+    max-width: 800px;
+    margin: 0 auto;
+    > div {
+        padding:10px;
+        background: #fff;
+
+        .address {
+            margin: 40px 0;
+        }
+        .product-list {
+            table td {
+                &.small {
+                    width:90px;
+                }
+                &.xs-small {
+                    width:60px;
+                }
+                &.xxs-small {
+                    width:30px;
+                }
+                .description {
+                    padding-bottom:4px;
+                }
+            }
         }
     }
 }
