order-functions added

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -2,6 +2,14 @@
     text-align: center;
 }
 
+.nested-panel {
+    margin-top:-15px;
+    padding-top: 15px;
+    margin-bottom: 20px;
+    background-color: #e9ecf2;
+    border-bottom: 1px solid #c1c9d4;
+}
+
 // variants
 .table.variants {
     tr {
