--- a/assets/scss/_cart.scss
+++ b/assets/scss/_cart.scss
@@ -104,11 +104,6 @@
     }
 }
 
-.offcanvas-cart {
-    position: fixed;
-    z-index: 10;
-}
-
 .cart-buttons {
     border-top: 1px solid $light-gray;
     padding-top: rem-calc(40);
@@ -128,4 +123,126 @@
             width: auto;
         }
     }
+}
+
+/// Offcanvas Cart
+
+.offcanvas-cart {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: $white;
+    border-left: 1px solid $light-gray;
+    width: rem-calc(300);
+    font-size: rem-calc(16);
+}
+
+.offcanvas-cart-success {
+    background-color: $success-color;
+    padding: rem-calc(10 20 10 60);
+    position: relative;
+    color: $white;
+    font-size: rem-calc(14);
+    .check {
+        display: block;
+        width: rem-calc(40);
+        padding-top: rem-calc(10);
+        text-align: center;
+        color: $white;
+        font-size: rem-calc(24);
+        line-height: 1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: auto;
+        bottom: 0;
+        background-color: scale_color($success-color, $lightness: -15%);
+    }
+}
+
+.offcanvas-cart-continue-shopping {
+    display: block;
+    background-color: $primary-color;
+    color: $white;
+    line-height: rem-calc(20);
+    padding: rem-calc(20);
+    width: 100%;
+    border-radius: 0;
+}
+
+.offcanvas-cart-items {
+    padding: rem-calc(20);
+    border-bottom: 1px solid $light-gray;
+}
+
+.offcanvas-cart-item {
+    position: relative;
+    &:not(:last-child) {
+        border-bottom: 1px solid $light-gray;
+    }
+    .image {
+
+    }
+
+    .description {
+        .amount {
+            font-weight: $global-weight-bold;
+        }
+
+        .name {
+
+        }
+
+        .price {
+            display: block;
+            font-weight: $global-weight-bold;
+        }
+    }
+
+    .remove {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: rem-calc(20);
+        height: rem-calc(20);
+        line-height: rem-calc(20);
+        color: $white;
+        background-color: $alert-color;
+        cursor: pointer;
+        &:before {
+            content: 'X';
+            font-size: rem-calc(14);
+            line-height: rem-calc(1);
+            display: block;
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+    }
+}
+
+.offcanvas-cart-prices {
+    padding: rem-calc(20);
+    .price {
+        @include clearfix();
+        font-weight: $global-weight-bold;
+        .label {
+            display: block;
+            float: left;
+        }
+
+        .amount {
+            display: block;
+            float: right;
+        }
+    }
+}
+
+.offcanvas-cart-buttons {
+    padding: rem-calc(20);
 }
