--- a/assets/scss/_cart.scss
+++ b/assets/scss/_cart.scss
@@ -83,6 +83,7 @@
         }
 
         .cart-item-remove {
+            position: relative;
             display: inline-block;
             width: rem-calc(24);
             height: rem-calc(24);
@@ -92,9 +93,17 @@
             text-align: center;
             color: $white;
             cursor: pointer;
-            i {
+            outline: none;
+            &:before {
+                content: 'X';
+                font-size: rem-calc(14);
+                line-height: rem-calc(1);
                 display: block;
-                line-height: rem-calc(24);
+                text-align: center;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
             }
             &:hover {
                 background-color: scale_color($alert-color, $lightness: -15%);
@@ -137,6 +146,11 @@
     border-left: 1px solid $light-gray;
     width: rem-calc(300);
     font-size: rem-calc(16);
+    //transform: translateX(100%);
+    transition: all 0.3s ease;
+    &.expanded {
+        transform: translateX(0);
+    }
 }
 
 .offcanvas-cart-success {
@@ -178,17 +192,22 @@
 }
 
 .offcanvas-cart-item {
+    @include clearfix();
     position: relative;
+    padding: rem-calc(10 0);
     &:not(:last-child) {
         border-bottom: 1px solid $light-gray;
     }
     .image {
         display: block;
-        width: rem-calc(40);
+        width: 20%;
         float: left;
+        padding-right: rem-calc(5);
     }
 
     .description {
+        float: left;
+        width: 70%;
         .quantity {
             font-weight: $global-weight-bold;
         }
@@ -206,17 +225,19 @@
     .remove {
         display: block;
         position: absolute;
-        top: 0;
+        top: 50%;
         right: 0;
+        transform: translateY(-50%);
         width: rem-calc(20);
         height: rem-calc(20);
         line-height: rem-calc(20);
+        border-radius: 50%;
         color: $white;
         background-color: $alert-color;
         cursor: pointer;
         &:before {
             content: 'X';
-            font-size: rem-calc(14);
+            font-size: rem-calc(10);
             line-height: rem-calc(1);
             display: block;
             text-align: center;
@@ -224,6 +245,10 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
+        }
+        &:hover {
+            background-color: scale_color($alert-color, $lightness: -15%);
+            color: $white;
         }
     }
 }
