select2 auto width  added

--- a/assets/scss/backend.scss
+++ b/assets/scss/backend.scss
@@ -6,6 +6,10 @@
     border-bottom: 1px solid #c1c9d4;
 }
 
+.form-group .select2-container {
+    display: block;
+}
+
 .coupon-functions {
     .coupon-clone-count {
         width: 60px;
