order.remarks added

--- a/assets/scss/pdf_styles.scss
+++ b/assets/scss/pdf_styles.scss
@@ -52,6 +52,13 @@ body {
     }
 }
 
+.remarks {
+    margin: 4mm 0 4mm 0;
+    p {
+        font-size: 9pt;
+    }
+}
+
 #invoice-summary {
     margin-top: 4mm;
     td {
